<resources>
    <string name="app_name">AE1_Calculadora_salario_Fuentes</string>
    <string name="salario_bruto_anual">Salario bruto anual</string>
    <string name="datosSalario">Datos sobre el salario</string>
    <string name="titleCalculadora">Calculadora de salario</string>
    <string name="datosPersonales">Datos personales</string>
    <string name="btnCalcular">Calcular salario neto</string>
    <string name="horas">Horas</string>
    <string name="_12_pagas">12 pagas</string>
    <string name="_14_pagas">14 pagas</string>
    <string name="age">Edad</string>
    <string name="children">Hijos/as</string>
    <string name="g_discapacidad">Gº discapacidad</string>
    <string name="tituloResultado">Tu salario neto es de: </string>
    <string name="recalculate">Recalcular Salario Neto</string>
    <string name="decre">Disminuir</string>
    <string name="inc">Aumentar</string>
    <string name="retencion">Retención de IRPF</string>
    <string name="deducciones">Posibles deducciones</string>

    <string-array name="tiposContrato">
        <item>Indefinido</item>
        <item>Temporal</item>
        <item>Fijo-discontinuo</item>
        <item>Formativo</item>
    </string-array>
    <string-array name="grupos_profesionales">
        <item>Directivos</item>
        <item>Cuadro técnico</item>
        <item>Mandos intermedios</item>
        <item>Empleados administrativos</item>
        <item>Comerciales</item>
        <item>Operarios cualificados</item>
        <item>Operarios no cualificados</item>
        <item>Personal de servicios</item>
        <item>Prácticas o formación</item>
        <item>Otros</item>
    </string-array>
    <string-array name="estadoCivil">
        <item>Soltero/a sin responsabilidades</item>
        <item>Soltero/a con responsabilidades</item>
        <item>Casado/a con responsabilidades</item>
        <item>Casado/a sin responsabilidades</item>
        <item>Divorciado/a o separado/a</item>
        <item>Viudo/a</item>
    </string-array>
    <string-array name="comunidadesAutonomas">
        <item>Andalucía</item>
        <item>Aragón</item>
        <item>Asturias</item>
        <item>Baleares</item>
        <item>Canarias</item>
        <item>Cantabria</item>
        <item>Castilla-La Mancha</item>
        <item>Castilla y León</item>
        <item>Cataluña</item>
        <item>Extremadura</item>
        <item>Galicia</item>
        <item>Madrid</item>
        <item>Murcia</item>
        <item>Navarra</item>
        <item>La Rioja</item>
        <item>País Vasco</item>
        <item>Valencia</item>
        <item>Ceuta</item>
        <item>Melilla</item>
    </string-array>
</resources>