<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background_app"
    android:padding="16dp"
    >


    <TextView
        android:id="@+id/tvCalculadora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleCalculadora"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cvDSalario"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvDSalario"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/background_component"
        app:layout_constraintTop_toBottomOf="@+id/tvCalculadora"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cvPagas"
        >
        <TextView
            android:id="@+id/tvDatosSalario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datosSalario"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            />
        <LinearLayout
            android:id="@+id/loSalario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/tvSalarioBruto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salario_bruto_anual"
                android:textColor="@color/white"
                android:layout_marginEnd="32dp"
                />
            <EditText
                android:id="@+id/etSalario"
                android:layout_width="86dp"
                android:layout_height="27dp"
                android:background="@color/sections"
                android:inputType="number"
                android:maxLength="6"
                android:textColor="@color/black"
                android:textColorHint="@color/hint"
                android:textSize="18sp"
                android:textAlignment="textEnd"
                android:layout_marginEnd="50dp"
                />
        </LinearLayout>

        <Spinner
            android:id="@+id/spTipoContrato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:entries="@array/tiposContrato"
            android:background="@color/sections"
            />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvHoras"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/background_component"
        app:layout_constraintTop_toBottomOf="@+id/cvDSalario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cvPagas"
        app:layout_constraintBottom_toTopOf="@+id/cvDPersonales"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/horas"
                android:textColor="@color/white"
                android:textSize="14sp"
                />
            <TextView
                android:id="@+id/tvHoras"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="40"
                android:textColor="@color/white"
                android:textSize="18sp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                >

                <ImageButton
                    android:id="@+id/btnSubHours"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/decre"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/baseline_remove_12"
                    app:tint="@color/background_component"
                    />

                <ImageButton
                    android:id="@+id/btnPlusHours"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/inc"
                    android:src="@drawable/baseline_add_12"
                    app:tint="@color/background_component"
                    />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cvPagas"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/background_component"
        app:layout_constraintTop_toBottomOf="@+id/cvDSalario"
        app:layout_constraintStart_toEndOf="@id/cvHoras"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cvDPersonales"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >
            <RadioGroup
                android:id="@+id/radioGroupPagas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:checkedButton="@+id/rbtn_12"
                >


            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rbtn_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_12_pagas"
                android:textColor="@color/white"
                />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rbtn_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_14_pagas"
                android:textColor="@color/white"
                />
            </RadioGroup>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cvDPersonales"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/background_component"
        app:layout_constraintTop_toBottomOf="@+id/cvPagas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/btnCalcular"
        >

        <TextView
            android:id="@+id/tvDatosPersonales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datosPersonales"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            />

        <Spinner
            android:id="@+id/spEstadoCivil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:entries="@array/estadoCivil"
            android:background="@color/sections"
            />

        <Spinner
            android:id="@+id/spComAuton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:entries="@array/comunidadesAutonomas"
            android:background="@color/sections"
            />

        <Spinner
            android:id="@+id/spGrupoProf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:entries="@array/grupos_profesionales"
            android:background="@color/sections"
            />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvEdad"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/background_component"
        app:layout_constraintTop_toBottomOf="@+id/cvDPersonales"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cvHijos"
        app:layout_constraintBottom_toTopOf="@+id/btnCalcular"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textColor="@color/white"
                android:textSize="14sp"
                />
            <TextView
                android:id="@+id/tvEdad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="0"
                android:textColor="@color/white"
                android:textSize="20sp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_margin="8dp"
                >

                <ImageButton
                    android:id="@+id/btnSubAge"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/decre"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/baseline_remove_12"
                    app:tint="@color/background_component"
                    />

                <ImageButton
                    android:id="@+id/btnPlusAge"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/inc"
                    android:src="@drawable/baseline_add_12"
                    app:tint="@color/background_component"
                    />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvHijos"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/background_component"
        app:layout_constraintTop_toBottomOf="@+id/cvDPersonales"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toEndOf="@id/cvEdad"
        app:layout_constraintEnd_toStartOf="@+id/cvDiscapacidad"
        app:layout_constraintBottom_toTopOf="@+id/btnCalcular"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/children"
                android:textColor="@color/white"
                android:textSize="14sp"
                />
            <TextView
                android:id="@+id/tvChildren"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="0"
                android:textColor="@color/white"
                android:textSize="20sp"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_margin="8dp"
                >

                <ImageButton
                    android:id="@+id/btnSubChildren"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/decre"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/baseline_remove_12"
                    app:tint="@color/background_component"
                    />

                <ImageButton
                    android:id="@+id/btnPlusChildren"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/inc"
                    android:src="@drawable/baseline_add_12"
                    app:tint="@color/background_component"
                    />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvDiscapacidad"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/background_component"
        app:layout_constraintTop_toBottomOf="@+id/cvDPersonales"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toEndOf="@id/cvHijos"
        app:layout_constraintBottom_toTopOf="@+id/btnCalcular"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/g_discapacidad"
                android:textColor="@color/white"
                android:textSize="12sp"
                />
            <TextView
                android:id="@+id/tvDiscapacidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="0"
                android:textColor="@color/white"
                android:textSize="20sp"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_margin="8dp"
                >

                <ImageButton
                    android:id="@+id/btnSubDiscap"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/decre"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/baseline_remove_12"
                    app:tint="@color/background_component"
                    />

                <ImageButton
                    android:id="@+id/btnPlusDiscap"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/inc"
                    android:src="@drawable/baseline_add_12"
                    app:tint="@color/background_component"
                    />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
    android:id="@+id/btnCalcular"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@+id/cvHijos"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginBottom="32dp"
    android:text="@string/btnCalcular"
    android:backgroundTint="@color/buttons"
    />

</androidx.constraintlayout.widget.ConstraintLayout>